# camster

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  Dockerfile.windows  README.md  TODO.md  docker-compose.yml
.github/workflows/: ci.yml
assets/: panel_config.py  sample_cube.stl
cmake/toolchains/: mingw-w64-x86_64.cmake
docs/: m6-hardening-release.md  nut-file-format.md
scripts/: clean.sh  docker-build-debug.sh  docker-build-release.sh  docker-build-windows.sh  docker-release-ci.sh
src/: AppSettings.cpp  AppSettings.hpp  CameraController.cpp  CameraController.hpp  ColorVertex.hpp  Gizmo.cpp  Gizmo.hpp  History.cpp  History.hpp  NutFile.cpp  NutFile.hpp  PanelConfig.cpp  PanelConfig.hpp  PrintSettings.cpp  PrintSettings.hpp  Project.hpp  ProjectTypes.hpp  Scene.hpp  StlMesh.cpp  StlMesh.hpp  Units.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  main.cpp
src/cam/: Cam.cpp  Cam.hpp
src/core/: AppLogic.cpp  AppLogic.hpp  AppState.hpp  StructuredLog.cpp  StructuredLog.hpp
src/dfm/: Dfm.cpp  Dfm.hpp
src/drawing/: Drawing.cpp  Drawing.hpp
src/interop/: Step.cpp  Step.hpp
src/shaders/: line.frag  line.vert  mesh.frag  mesh.vert
src/sketch/: Constraint.hpp  Extrude.cpp  Extrude.hpp  ExtrudeTool.cpp  ExtrudeTool.hpp  Primitive.hpp  Profile.hpp  Sketch.cpp  Sketch.hpp  SketchTool.cpp  SketchTool.hpp
src/ui/: FileBrowser.cpp  FileBrowser.hpp  PrintWindow.cpp  PrintWindow.hpp  Toolbar.cpp  Toolbar.hpp  UIWindows.cpp  UIWindows.hpp
tests/: perf_bench.cpp  regression_suite.cpp
